--- a/8 Basic.AJAX + JSON/AjaxJson/Views/Employees/Edit.cshtml
+++ b/8 Basic.AJAX + JSON/AjaxJson/Views/Employees/Edit.cshtml
@@ -5,7 +5,7 @@
 
 @{
     ViewBag.Title = "Edit";
-    //Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Edit</h2>
